# azimuth-id

./: Cargo.toml  Dockerfile  azimuth-id-server  docker-compose.yml  flake.nix  nginx.conf
crates/azimuth-client/: Cargo.toml  README.md
crates/azimuth-client/src/: lib.rs
crates/azimuth-proto/: Cargo.toml  build.rs
crates/azimuth-proto/proto/: auth.proto
crates/azimuth-proto/src/: lib.rs
frontend/: index.html
migrations/: 20240101000001_create_users.sql  20240101000002_create_refresh_tokens.sql
src/: captcha.rs  config.rs  main.rs
src/domain/: email.rs  jwt.rs  mod.rs  refresh_token.rs  state.rs  user.rs  verification_code.rs
src/grpc/: mod.rs  service.rs
src/http/: handlers.rs  middleware.rs  mod.rs
