[package]
name = "azimuth-proto"
version = "0.1.0"
edition = "2021"
description = "Protobuf definitions for Azimuth Auth Service"
license = "MIT"
repository = "https://github.com/NameOfShadow/azimuth-auth"

[dependencies]
tonic = "0.14.3"
prost = "0.14.3"
tonic-prost = "0.14.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
tonic-prost-build = "0.14.5"

[features]
default = ["serde"]
serde = ["dep:serde"]